<resources>
    <string name="app_name">Kukudose1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="names125"> names</string>
    <string name="home"><u>Home</u></string>
    <string name="newcaste">Symptoms</string>
    <string name="Respiratory"> Respiratory</string>
    <string name="behavioral"> Behavioural</string>
    <string name="Nutritional"> Nutritional</string>
    <string name="Intestinal"> Intestinal</string>
    <string name="Parasitic"> Parasitic</string>
    <string name="Skin"> Skin infections</string>
    <string name="lame"> Lameness</string>
    <string name="fungi"> Fungal</string>
    <string-array name="images">
        <item> R.drawable.chicken1</item>
        <item> R.drawable.chicken1</item>
        <item> R.drawable.chicken1</item>
    </string-array>
    <string-array name="web_description">
        <item> Fresh Eggs Daily</item>
        <item> Poultry site</item>
        <item> Papaak.com</item>
        <item> SmallHolder.co.uk</item>
        <item> BackYards Chickens</item>
        <item> Reddit.com</item>
        <item> Poultry World</item>
        <item> Feed Spot</item>
    </string-array>
    <string-array name="Respiratory_diseases">
        <item> Newcastle</item>
        <item> Avian Influenza</item>
        <item> Infectious Bronchitis</item>
        <item> Laryngotracheitis</item>
    </string-array>
    <string-array name="Nervous_diseases">
        <item> Marek's Disease</item>
        <item> Fowl Cholera</item>
        <item> Eastern equine encephacitis</item>

    </string-array>
    <string-array name="Intestinal_diseases">
        <item> Fowl Typhoid</item>
        <item> Gumboro</item>
        <item> Worms</item>

    </string-array>
    <string name="AboutHeader">About</string>
    <string name="CauseHeader">Cause</string>
    <string name="SignsHeader">Signs and Symptoms</string>
    <string name="TreatmentHeader">Treatment</string>
    <string name="ControlHeader">Control and Preventive</string>
    <string name="Mareks_About1">also referred to as visceral leukosis, fowl paralysis, and range paralysis Also is a type of Avian Cancer.</string>
    <string name="Mareks_Cause">Caused by a virus.Tumors in nerves cause lameness and paralysis.Tumors can occur in the eyes and cause irregularly shaped pupils and blindness. Tumors of the liver, kidney, spleen, gonads, pancreas, proventriculus, lungs, muscles, and skin cause incoordination, unthriftiness, paleness, weak labored breathing, and enlarged feather follicles. In the later stages of an infection, birds become emaciated and have pale, scaly combs and greenish diarrhea.</string>
    <string name="Marek_Signs">
        &#8226;Inability to use or raise the wings\n\n
        &#8226;Partial paralysis\n\n
        &#8226;Blindness\n\n
        &#8226;Ataxia (lack of muscle control)\n\n
        &#8226;Emanciation\n\n
    </string>
    <string name="MareksDisease_treatment">Currently there is no treatment for Marek\'s disease.</string>
    <string name="MareksDisease_Prevention">Vaccinations are usually available in hatcheries. All newly hatched birds should be vaccinated for Marek\'s disease.</string>
    <string name="FowlTyphoid_About">About</string>
    <string name="FowlTyphoid_About1">Is a disease caused by the bacterium Salmonella gallinarium.
        Poultry are natural hosts for this bacterium.
    </string>
    <string name="FowlTyphoid_Cause">Cause</string>
    <string name="FowlTyphoid_Cause1">Fowl typhoid can be introduced into a flock by wild birds,
        mammals, and flies. Within a flock, fowl typhoid is spread by bird-to-bird contact as well
        as through cannibalism of infected carcasses, wound contamination, and fecal contamination
        of feed, water, and litter. In addition, the bacteria can spread to chicks in the egg, as
        when eggs come from a contaminated hatchery.
    </string>
    <string name="FowlTyphoid_Signs">Signs and Symptoms</string>
    <string name="FowlTyphoid_Signs1">Chicks hatched from eggs infected with Salmonella gallinarium
        sicken and die within weeks of hatching. Infected chicks exhibit weakness, poor appetite,
        and stunted growth, and they may make shrill chirping and peeping sounds. In addition, their
        droppings are chalky white. Signs of this disease may not appear for the first five to ten
        days after infection. However, unlike pullorum disease, fowl typhoid has a tendency to
        affect growing or mature birds. Mortality in young birds is similar to that of pullorum
        disease, but it can be higher in older birds.
    </string>
    <string name="FowlTyphoid_Treatment">Treatment</string>
    <string name="FowlTyphoid_Treatment1">Treatment is not feasible. Recovered birds have a tendency
        to become carriers. It is best to depopulate a flock that tests positive for Salmonella
        gallinarium.
    </string>
    <string name="FowlTyphoid_Control">Control and Prevention</string>
    <string name="FowlTyphoid_Control1">Maintain a rigorous biosecurity program.To prevent fowl
        typhoid, obtain your birds or hatching eggs from a hatchery participating in the National
        Poultry Improvement Plan (NPIP).Do not mix NPIP-certified flocks with noncertified birds.
    </string>
    <string name="VaccinationGeneralHeader">Vaccination Methods in Poultry.</string>
    <string name="IndividualVaccinationHeader">INDIVIDUAL BIRD APPLICATION METHODS OF POULTRY VACCINATION</string>
    <string name="SubcutaneousHeader">Subcutaneous injection</string>
    <string name="SubcutaneousContent">Subcutaneous injection: Marek’s Disease vaccine in the hatchery. Inactivated vaccines such as Newcastle Disease Virus, Infectious Bronchitis Virus, Reovirus and Infectious Bursal Disease Virus may be given to Breeder Hens at housing by subcutaneous injection into the back of the mid-neck region.</string>
    <string name="ConjunctivalHeader">Conjunctival sac installation</string>
    <string name="ConjunctivalContent">Conjunctival sac installation: (eyedrop) Newcastle Disease, Infectious Bronchitis, Infectious Laryngotracheitis vaccines. One hand holds the head, thumb pressing the lower eyelid down, deposit one drop into the eye, said to be faster operation than transnasal drop.</string>
    <string name="WingWebHeader">Wing-web puncture</string>
    <string name="WingWebContent">Wing-web puncture: Fowl Pox (pigeon pox), and Avian Encephalomyelitis, Fowl Cholera chickens. Use double-prong sewing machine needle (supplied by vaccine manufacturer), dip into vaccine before each stab, spread the wing to expose the underside (up), stab through, do not touch feather with needles, avoid vessels. For fowl pox, examine for “take” 6-10 days post, swelling followed by scab formation. Revaccinate non-reactor flock. To vaccinate turkeys, puncture the loose skin between the thigh and abdomen.</string>
    <string name="FeatherFollicleHeader">Feather follicle inoculation</string>
    <string name="FeatherFollicleContent">Feather follicle inoculation: Fowl pox vaccine in turkeys. Remove 2-3 feather follicles over the thigh, brush against the opening of the follicle with vaccine-dipped brush (supplied) or the vaccine may be sprayed on the area with a sprayer, hold the tip 2?-3? away. Examine for “take” 6-10 days post.</string>
    <string name="IntramuscularHeader">Intramuscular injection</string>
    <string name="IntramuscularContent">Intramuscular injection: Vaccines (Infectious Bursal Disease, Newcastle Disease, Mycoplasma gallisepticum Fowl Cholera, Infectious Bronchitis, Reovirus) alone or in combination are used in Breeder birds usually just before housing. IM injection is in the pectoral muscles, using continuous flow, automatic syringe.</string>
    <string name="EmbryoHeader">Embryo Injection</string>
    <string name="EmbryoContent">Embryo Injection: Vaccines (Marek’s Disease, Infectious Bursal Disease, Newcastle Disease or Infectious Bronchitis) are injected into 18 day old embryonating eggs with an automated machine.</string>
    <string name="FlockVaccinationHeader">METHODS OF POULTRY VACCINATION  FLOCK APPLICATION</string>
    <string name="AerosolHeader">Aerosol</string>
    <string name="AerosolContent">Aerosol: Infectious Bronchitis vaccine, Newcastle Disease vaccine, and Laryngotracheitis vaccine. Day or night, house closed sufficiently to prevent cross drafts, use sprayer recommended by vaccine manufacturer, minimum spraying time 3-4 minutes, do not open the house for 15 minutes. Protect worker with goggles and face mask. Now also done in a spray cabinet at day one in hatchery for administering Newcastle-Bronchitis and Infectious Bursal Disease.</string>
    <string name="WaterAdministrationHeader">Water Administration</string>
    <string name="WaterAdministrationContent">Water Administration: Newcastle disease, Infectious Bronchitis, (or the two combined), Avian Encephalomyelitis, Infectious Bursal Disease and Infectious Laryngotracheitis vaccines. Waterer with plastic bottom or glass container best, free of sanitizer in water or container, withhold water one hour in hot weather, or longer in cold weather, vaccine in cold water, and provide enough water space so that 2/3 birds of the flock can drink at one time. Add 0.1% powdered skim milk as stabilizer. All vaccine should be consumed within 45 minutes.</string>
    <string name="DrugAdministrationHeader">METHODS OF DRUG ADMINISTRATION TO DISEASED POULTRY FLOCKS</string>
    <string name="DrugGeneralContent">Commonly used drugs include – antibiotics, anticoccidial, antihistomonals and growth promotants</string>
    <string name="InFeedHeader">In Feed</string>
    <string name="InFeedCOntent">In Feed: Often used in preventive or long-term medication. Must be done when mixing feed and requires planning so that delivery and storage on the farm does not delay treatment. Requires no additional work at the farm.</string>
    <string name="DrinkingWaterHeader">Drinking Water</string>
    <string name="DrinkingWaterContent">In Drinking Water: Must be done at the farm and requires supervision. Compared to feed administration there is no delay in administration or withdrawal, prompt absorption and convenient to use. Birds may continue to drink when sick and “off feed”.</string>
    <string name="DustHeader">Topical Spray or Dust</string>
    <string name="DustContent">Topical Spray or Dust: (for Ectoparasites)</string>
    <string name="EggDippingHeader">Egg Dipping</string>
    <string name="EggDippingContent">Egg Dipping: Must be done at the hatchery under controlled conditions. Usually results in reduced hatchability or fertility (e.g. antibiotics to control egg transmissible diseases such as mycoplasma).</string>
    <string name="BirdInjectionHeader">Individual Bird Injection</string>
    <string name="BirdInjectionContent">Individual Bird Injection: Expensive labor use and time consuming, but sometimes necessary in severe disease or when drug of choice is non-absorbable (e.g. antibiotics).</string>
    <string name="GeneralNote">Note: Some drugs or antibiotics require pre slaughter withdrawal time or are not permitted for use in laying birds.</string>
</resources>