<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.fidelmomolo.kukudose1.TreatmentApplicationActivity"
    tools:showIn="@layout/activity_treatment_application">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:padding="20dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/VaccinationGeneralHeader"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="@color/headerColor"
        android:layout_marginTop="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/IndividualVaccinationHeader"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="@color/headerColor"
        android:layout_marginTop="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SubcutaneousHeader"
            android:textStyle="bold"
            android:textSize="22sp"
            android:textColor="@color/headerColor"
            android:layout_marginTop="10dp"/>
        <ImageButton
            android:src="@drawable/youtube"
            android:layout_marginTop="10dp"
            android:layout_height="30dp"
            android:layout_width="100dp"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/SubcutaneousContent"
        android:textSize="18sp"
        android:textColor="@color/textColor"
        android:layout_marginTop="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ConjunctivalHeader"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="@color/headerColor"
        android:layout_marginTop="10dp"/>
        <ImageButton
            android:src="@drawable/youtube"
            android:layout_marginTop="10dp"
            android:layout_height="30dp"
            android:layout_width="100dp"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ConjunctivalContent"
        android:textSize="18sp"
        android:textColor="@color/textColor"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/WingWebHeader"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="@color/headerColor"
        android:layout_marginTop="10dp"/>
        <ImageButton
            android:src="@drawable/youtube"
            android:layout_marginTop="10dp"
            android:layout_height="30dp"
            android:layout_width="100dp"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/WingWebContent"
        android:textSize="18sp"
        android:textColor="@color/textColor"
        android:layout_marginTop="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/FeatherFollicleHeader"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="@color/headerColor"
        android:layout_marginTop="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/FeatherFollicleContent"
        android:textSize="18sp"
        android:textColor="@color/textColor"
        android:layout_marginTop="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/IntramuscularHeader"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="@color/headerColor"
        android:layout_marginTop="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/IntramuscularContent"
        android:textSize="18sp"
        android:textColor="@color/textColor"
        android:layout_marginTop="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/EmbryoHeader"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="@color/headerColor"
        android:layout_marginTop="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/EmbryoContent"
        android:textSize="18sp"
        android:textColor="@color/textColor"
        android:layout_marginTop="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/FlockVaccinationHeader"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="@color/headerColor"
        android:layout_marginTop="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AerosolHeader"
            android:textStyle="bold"
            android:textSize="22sp"
            android:textColor="@color/headerColor"
            android:layout_marginTop="10dp"/>
        <ImageButton
            android:src="@drawable/youtube"
            android:layout_marginTop="15dp"
            android:layout_height="30dp"
            android:layout_width="100dp"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/AerosolContent"
        android:textSize="18sp"
        android:textColor="@color/textColor"
        android:layout_marginTop="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/WaterAdministrationHeader"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="@color/headerColor"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/WaterAdministrationContent"
        android:textSize="18sp"
        android:textColor="@color/textColor"
        android:layout_marginTop="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/DrugAdministrationHeader"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="@color/headerColor"
        android:layout_marginTop="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/DrugGeneralContent"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="@color/headerColor"
        android:layout_marginTop="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/InFeedHeader"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="@color/headerColor"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/InFeedCOntent"
        android:textSize="18sp"
        android:textColor="@color/textColor"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/DrinkingWaterHeader"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="@color/headerColor"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/DrinkingWaterContent"
        android:textSize="18sp"
        android:textColor="@color/textColor"
        android:layout_marginTop="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/DustHeader"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="@color/headerColor"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/DustContent"
        android:textSize="18sp"
        android:textColor="@color/textColor"
        android:layout_marginTop="10dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/EggDippingHeader"
            android:textStyle="bold"
            android:textSize="22sp"
            android:textColor="@color/headerColor"
            android:layout_marginTop="10dp"/>
        <ImageButton
            android:src="@drawable/youtube"
            android:layout_marginTop="15dp"
            android:layout_height="30dp"
            android:layout_width="100dp"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/EggDippingContent"
        android:textSize="18sp"
        android:textColor="@color/textColor"
        android:layout_marginTop="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/BirdInjectionHeader"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="@color/headerColor"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/BirdInjectionContent"
        android:textSize="18sp"
        android:textColor="@color/textColor"
        android:layout_marginTop="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/GeneralNote"
        android:textSize="18sp"
        android:textColor="@color/textColor"
        android:layout_marginTop="10dp"/>

</LinearLayout>
</ScrollView>