<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.fidelmomolo.kukudose1.MareksActivity"
    tools:showIn="@layout/activity_mareks">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/chicken1"
        android:scaleType="centerCrop"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/AboutHeader"
            android:textStyle="bold"
            android:textSize="22sp"
            android:textColor="@color/headerColor"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Mareks_About1"
            android:textSize="18sp"
            android:textColor="@color/textColor"
            android:layout_marginTop="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CauseHeader"
            android:textStyle="bold"
            android:textSize="22sp"
            android:textColor="@color/headerColor"
            android:layout_marginTop="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Mareks_Cause"
            android:textSize="18sp"
            android:textColor="@color/textColor"
            android:layout_marginTop="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SignsHeader"
            android:textStyle="bold"
            android:textSize="22sp"
            android:textColor="@color/headerColor"
            android:layout_marginTop="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Marek_Signs"
            android:textSize="18sp"
            android:textColor="@color/textColor"
            android:layout_marginTop="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TreatmentHeader"
            android:textStyle="bold"
            android:textSize="22sp"
            android:textColor="@color/headerColor"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/MareksDisease_treatment"
            android:textSize="18sp"
            android:textColor="@color/textColor"
            android:layout_marginTop="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ControlHeader"
            android:textStyle="bold"
            android:textSize="22sp"
            android:textColor="@color/headerColor"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/MareksDisease_Prevention"
            android:textSize="18sp"
            android:textColor="@color/textColor"
            android:layout_marginTop="10dp"/>

    </LinearLayout>


</LinearLayout>
</ScrollView>
